# langchain-pixeltable

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
langchain_pixeltable/: __init__.py  vectorstore.py
tests/integration_tests/: test_vectorstore_integration.py
tests/unit_tests/: test_pixeltable_integration.py  test_vectorstore.py
