[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-pixeltable"
version = "0.1.1"
description = "LangChain VectorStore integration for Pixeltable multimodal data infrastructure."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Pixeltable", email = "contact@pixeltable.com" },
]
keywords = ["langchain", "pixeltable", "vectorstore", "multimodal", "embeddings", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3",
    "pixeltable>=0.2.28",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "langchain-openai>=0.3",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/pixeltable/langchain-pixeltable"
Repository = "https://github.com/pixeltable/langchain-pixeltable"
Documentation = "https://docs.pixeltable.com/"
Issues = "https://github.com/pixeltable/langchain-pixeltable/issues"
Discord = "https://discord.gg/QPyqFYx2UN"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
